[package]
name = "rust-csv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
rusqlite = "0.31.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_with = "3.8.3"


[dev-dependencies]
tempfile = "3.10.1"
